--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,15 +4,25 @@
 
 html,
 body {
-	margin:0;
-	padding:0;
-	
-	font-family: 'Noto Sans', sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: var(--font-family);
+	color: var(--black);
 }
 
-
 a {
-	text-decoration: none;
-
 	color: inherit;
+	text-decoration: none;
+}
+
+:root {
+	--black: #3B434E;
+	--gray: #EBEBEB;
+	--white: white;
+	--primary: #7653FC;
+	--primary-hover: #6C47FF;
+	--red: #FC836D;
+	--green: #1DC37E;
+	--light-green: #C8F8E4;
+	--font-family: "Noto Sans", sans-serif;
 }
