--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,12 @@ a {
 	text-decoration: none;
 }
 
+ul {
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+
 :root {
 	--black: #3B434E;
 	--light-gray: #EBEBEB;
