--- a/components/Tag/Tag.module.css
+++ b/components/Tag/Tag.module.css
@@ -2,6 +2,7 @@
 	display: inline-block;
 	padding: 5px 10px;
 	border-radius: 20px;
+	
 }
 
 .small {
@@ -25,7 +26,7 @@
 	border: 1px solid var(--light-gray);
 }
 
-.grey {
+.gray {
 	font-weight: 600;
 	color: var(--white);
 	background-color: #B3C0D9;
