--- a/components/Card/Card.module.css
+++ b/components/Card/Card.module.css
@@ -1,7 +1,6 @@
 .card {
-	padding: 30px;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
 	border-radius: 5px;
+	box-shadow: 0 4px 4px rgb(0 0 0 / 5%);
 }
 
 .blue {
