--- a/components/HhData/HhData.module.css
+++ b/components/HhData/HhData.module.css
@@ -1,3 +1,97 @@
 .hhdata {
+	display: grid;
+	grid-template-columns: 1fr 3fr;
+	gap: 30px;
 	margin-top: 50px;
+	font-size: 20px;
+	font-weight: 300;
+	line-height: 27px;
+}
+
+.head {
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-column: 1 / -1;
+	gap: 20px;
+	align-items: center;
+	justify-content: flex-start;
+}
+
+.countWrapper {
+	display: grid;
+	grid-template-columns: 1fr;
+	justify-items: center;
+	padding: 20px 0;
+}
+
+.countTitle {
+	margin-bottom: 10px;
+}
+
+.count {
+	font-size: 36px;
+	font-weight: 700;
+	line-height: 49px;
+	color: var(--primary);
+}
+
+.salary {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	justify-content: center;
+	padding: 20px 0;
+}
+
+.salaryWrapper {
+	text-align: center;
+	border-right: 1px solid var(--light-gray);
+}
+
+.salaryPrice {
+	margin: 10px 0;
+	font-size: 26px;
+	font-weight: 700;
+	line-height: 35px;
+}
+
+.salaryRating {
+	display: flex;
+	justify-content: space-between;
+	width: 80px;
+	margin: 0 auto;
+}
+
+.filled circle {
+	fill: var(--red);
+}
+
+.salaryWrapper:nth-child(3) {
+	border: none;
+}
+
+@media screen and (max-width: 1100px) {
+	.hhdata {
+		grid-template-columns: 1fr;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.salary {
+		grid-template-columns: 1fr;
+		padding: 0 20px;
+	}
+
+	.salaryWrapper {
+		padding: 20px 0;
+		border-right: none;
+		border-bottom: 1px solid var(--light-gray);
+	}
+
+	.salaryPrice {
+		margin: 7px 0;
+	}
+
+	.salaryWrapper:nth-child(3) {
+		border: none;
+	}
 }
