--- a/layout/Footer/Footer.module.css
+++ b/layout/Footer/Footer.module.css
@@ -3,6 +3,7 @@
 	grid-template-columns: 1fr auto auto;
 	gap: 40px;
 	padding: 20px 30px;
+	margin-top: 30px;
 	font-size: 16px;
 	line-height: 20px;
 	color: var(--white);
