--- a/page-components/BorPage/BorPage.module.css
+++ b/page-components/BorPage/BorPage.module.css
@@ -20,3 +20,21 @@
 .skillsTag {
 	margin-right: 10px;
 }
+
+.seoText h1 {
+  font-size: 26px;
+	font-weight: 500;
+	line-height: 35px;
+}
+
+.seoText h2 {
+  font-size: 22px;
+	font-weight: 600;
+	line-height: 30px;
+}
+
+.seoText h3 {
+  font-size: 20px;
+	font-weight: 500;
+	line-height: 27px;
+}
