--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -1,12 +1,12 @@
 .input {
-  padding: 8px 12px;
-  border:none;
-  font-family: var(--font-family);
-  border-radius: 5px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-  color: var(--black);
+	padding: 8px 12px;
+	font-family: var(--font-family);
+	color: var(--black);
+	border: none;
+	border-radius: 5px;
+	box-shadow: 0 4px 4px rgb(0 0 0 / 5%);
 }
 
-.input:focus-visible{
-  outline: thin groove var(--primary);
+.input:focus-visible {
+	outline: thin groove var(--primary);
 }
