--- a/page-components/BorPage/BorPage.module.css
+++ b/page-components/BorPage/BorPage.module.css
@@ -13,6 +13,11 @@
 	justify-items: left;
 }
 
+.productList {
+	display: grid;
+	gap: 20px;
+}
+
 .skillsHead {
 	margin-bottom: 20px;
 }
@@ -22,19 +27,19 @@
 }
 
 .seoText h1 {
-  font-size: 26px;
+	font-size: 26px;
 	font-weight: 500;
 	line-height: 35px;
 }
 
 .seoText h2 {
-  font-size: 22px;
+	font-size: 22px;
 	font-weight: 600;
 	line-height: 30px;
 }
 
 .seoText h3 {
-  font-size: 20px;
+	font-size: 20px;
 	font-weight: 500;
 	line-height: 27px;
 }
