--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -2,11 +2,32 @@
 	padding: 8px 12px;
 	font-family: var(--font-family);
 	color: var(--black);
-	border: none;
+	border:none;
 	border-radius: 5px;
 	box-shadow: 0 4px 4px rgb(0 0 0 / 5%);
 }
 
 .input:focus-visible {
 	outline: thin groove var(--primary);
+}
+
+.wrapper {
+  position: relative;
+}
+
+.error {
+  outline: thin groove var(--red);
+}
+
+.error:focus-visible {
+  outline: thin groove var(--primary);
+}
+
+.errorMessage {
+  color: var(--red);
+  position:absolute;
+  width: 100%;
+  left: 0;
+  top: 33px;
+  font-size: 13px;
 }
