--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -153,18 +153,13 @@
 	margin-right: 20px;
 }
 
-.closed {
-	height: 0;
-	padding: 0;
-	overflow: hidden;
-}
-
-.opened {
-	height: auto;
-	padding: 30px;
+.reviewWrapper {
+  overflow: hidden;
+  margin-top: -5px;
 }
 
 .reviews {
+  padding: 30px;
 	margin-top: -5px;
 }
 
