--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -39,6 +39,7 @@
 
 .secondLevelMenuItem {
 	margin-top: 10px;
+  overflow: hidden;
 }
 
 .secondLevelMenuHead {
@@ -55,20 +56,9 @@
 }
 
 .thirdLevelMenu {
-	display: none;
-	margin-top: 13px;
-	margin-bottom: 20px;
 	font-size: 14px;
 	font-weight: 500;
 	line-height: 19px;
-}
-
-.thirdLevelMenuOpen {
-	display: block;
-}
-
-.thirdLevelMenuItem {
-	margin-bottom: 10px;
 }
 
 .thirdLevelMenuItem:hover,
