--- a/components/ButtonIcon/ButtonIcon.module.css
+++ b/components/ButtonIcon/ButtonIcon.module.css
@@ -1,12 +1,11 @@
 .button {
-  width: 40px;
-  height: 40px;
-  border: none;
-  border-radius: 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-  padding: 0;
-  cursor: pointer;
-  
+	width: 40px;
+	height: 40px;
+	padding: 0;
+	cursor: pointer;
+	border: none;
+	border-radius: 10px;
+	box-shadow: 0 4px 4px rgb(0 0 0 / 5%);
 }
 
 .primary {
@@ -14,7 +13,7 @@
 }
 
 .primary svg * {
-  fill: var(--white);
+	fill: var(--white);
 }
 
 .primary:hover {
@@ -26,11 +25,11 @@
 }
 
 .white svg * {
-  fill: var(--primary);
+	fill: var(--primary);
 }
 
 .white:hover {
-  background-color: var(--primary);
+	background-color: var(--primary);
 }
 
 .white:hover svg * {
