--- a/components/ReviewForm/ReviewForm.module.css
+++ b/components/ReviewForm/ReviewForm.module.css
@@ -30,10 +30,10 @@
 }
 
 .popup {
-  position: relative;
-  grid-column: start / end;
-  padding: 15px;
-  border-radius: 5px;
+	position: relative;
+	grid-column: start / end;
+	padding: 15px;
+	border-radius: 5px;
 }
 
 .popup svg {
@@ -49,15 +49,13 @@
 }
 
 .error {
-  color: var(--red);
-  background-color: var(--light-red);
+	color: var(--red);
+	background-color: var(--light-red);
 }
 
 .error path {
-  stroke: var(--red)
+	stroke: var(--red);
 }
-
-
 
 @media screen and (max-width: 1100px) {
 	.reviewForm {
