--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@ ul {
 	--primary: #FC007E;
 	--primary-hover: #AF0058;
 	--red: #FC836D;
-  --light-red:#ffbbaf;
+	--light-red: #FFBBAF;
 	--green: #1DC37E;
 	--light-green: #C8F8E4;
 	--font-family: "Noto Sans", sans-serif;
