--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -76,7 +76,7 @@
 
 .advantages {
 	padding-left: 15px;
-	border-left: 3px solid var(--green);
+	border-left: 3px solid #1DC37E;
 }
 
 .disadvantages {
