--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -1,3 +1,23 @@
+.skip {
+  height: 0;
+  padding: 0;
+  background: var(--primary);
+  color: var(--white);
+  position: fixed;
+  top:10px;
+  left: 30px;
+  border-radius:5px;
+  overflow: hidden;
+}
+.skipDisplay {
+  height: auto;
+  padding: 5px;
+}
+
+.skip:focus-visible {
+  background: var(--primary-hover);
+}
+
 .wrapper {
 	position: relative;
 	display: grid;
@@ -22,6 +42,7 @@
 
 .body {
 	grid-area: body;
+  outline: none;
 }
 
 .footer {
