--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -49,6 +49,9 @@
 	text-transform: uppercase;
 	cursor: pointer;
 }
+.secondLevelMenuHead:focus-visible {
+  outline-offset: -1px;
+}
 
 .secondLevelMenuHead:hover,
 .secondLevelMenuHeadActive {
