--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -43,14 +43,19 @@
 }
 
 .secondLevelMenuHead {
+	padding: 0;
+	border:none;
+	background-color: inherit;
+	font-family: inherit;
 	font-size: 12px;
 	font-weight: 300;
 	line-height: 16px;
 	text-transform: uppercase;
 	cursor: pointer;
 }
+
 .secondLevelMenuHead:focus-visible {
-  outline-offset: -1px;
+	outline-offset: -1px;
 }
 
 .secondLevelMenuHead:hover,
