--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,13 +14,20 @@ body {
 a {
 	color: inherit;
 	text-decoration: none;
-  outline-offset: -1px;
+	outline-offset: -1px;
 }
 
 ul {
 	padding: 0;
 	margin: 0;
 	list-style: none;
+}
+
+.visualyHidden {
+	position: absolute;
+	width: 0;
+	height: 0;
+	overflow: hidden;
 }
 
 :root {
